--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 //section
 @import "section/header";
 @import "section/natural";
+@import "section/burger-info";
 @import "section/best";
 @import "section/team";
 @import "section/menu";
