--- a/css/main.css
+++ b/css/main.css
@@ -684,7 +684,9 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  height: 0;
+  overflow: hidden; }
 
 .team__item--active .team__item-btn:before {
   -webkit-transform: rotate(180deg);
