--- a/scss/section/team.scss
+++ b/scss/section/team.scss
@@ -66,8 +66,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  // height: 0;
-  // overflow: hidden;
+  height: 0;
+  overflow: hidden;
 }
 
 .team__item--active {
