--- a/scss/section/header.scss
+++ b/scss/section/header.scss
@@ -7,6 +7,7 @@
   width: 25px;
   height: 25px;
   background: url("../img/decor/menu.png") center center no-repeat;
+  cursor: pointer;
   display: none;
 
   @include tablets() {
@@ -29,7 +30,7 @@
   position: relative;
 
   &:before {
-    color: white;
+    color: red;
     content: '•';
     top: 1px;
     left: -15px;
