--- a/scss/section/natural-menu.scss
+++ b/scss/section/natural-menu.scss
@@ -19,9 +19,10 @@
     width: 20px;
     height: 20px;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 30px;
+    top: 30px;
     cursor: pointer;
+    border: none;
 }
 
 .menu__list {
