--- a/scss/section/natural-menu.scss
+++ b/scss/section/natural-menu.scss
@@ -14,16 +14,16 @@
     display: initial;
 }
 
-.menu__exit {
-    background: url('../img/decor/exit.png') center center no-repeat;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 30px;
-    top: 30px;
-    cursor: pointer;
-    border: none;
-}
+// .menu__exit {
+//     background: url('../img/decor/exit.png') center center no-repeat;
+//     width: 20px;
+//     height: 20px;
+//     position: absolute;
+//     right: 30px;
+//     top: 30px;
+//     cursor: pointer;
+//     border: none;
+// }
 
 .menu__list {
     display: flex;
