--- a/scss/section/burger-info.scss
+++ b/scss/section/burger-info.scss
@@ -39,8 +39,13 @@
     position: relative;
     display: flex;
     align-items: center;
+    height: 80vh;
     width: 100%;
     min-height: 475px;
+
+    @include tablets() {
+        flex-direction: column;
+    }
 }
 
 .slide__decor {
@@ -49,6 +54,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include tablets() {
+        width: 100%;
+        height: 50%;
+    }
 }
 
 .slide__decor-composition {
@@ -65,6 +75,10 @@
     align-items: center;
     justify-content: center;
     text-decoration: uppercase;
+
+    @include tablets() {
+        left: 10%;
+    }
 }
 
 .composition__svg {
@@ -88,6 +102,13 @@
     justify-content: center;
     text-decoration: uppercase;
     opacity: .5;
+
+    @include tablets() {
+        left: 70%;
+        bottom: 100%;
+        top: 0px;
+        right: 0px;
+    }
 }
 
 .kkal__count {
@@ -108,6 +129,12 @@
 
 .slide__content {
     width: 45%;
+
+    @include tablets() {
+        width: 80%;
+        text-align: center;
+        height: 50%;
+    }
 }
 
 .slide__title {
