--- a/css/main.css
+++ b/css/main.css
@@ -392,8 +392,12 @@ ul {
   position: relative;
   display: flex;
   align-items: center;
+  height: 80vh;
   width: 100%;
   min-height: 475px; }
+  @media screen and (max-width: 800px) {
+    .burger-info__slide {
+      flex-direction: column; } }
 
 .slide__decor {
   width: 55%;
@@ -401,6 +405,10 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media screen and (max-width: 800px) {
+    .slide__decor {
+      width: 100%;
+      height: 50%; } }
 
 .slide__decor-composition {
   position: absolute;
@@ -416,6 +424,9 @@ ul {
   align-items: center;
   justify-content: center;
   text-decoration: uppercase; }
+  @media screen and (max-width: 800px) {
+    .slide__decor-composition {
+      left: 10%; } }
 
 .composition__svg {
   width: 45px;
@@ -437,6 +448,12 @@ ul {
   justify-content: center;
   text-decoration: uppercase;
   opacity: .5; }
+  @media screen and (max-width: 800px) {
+    .slide__decor-kkal {
+      left: 70%;
+      bottom: 100%;
+      top: 0px;
+      right: 0px; } }
 
 .kkal__count {
   position: absolute;
@@ -453,6 +470,11 @@ ul {
 
 .slide__content {
   width: 45%; }
+  @media screen and (max-width: 800px) {
+    .slide__content {
+      width: 80%;
+      text-align: center;
+      height: 50%; } }
 
 .slide__title {
   color: white; }
