--- a/scss/section/menu.scss
+++ b/scss/section/menu.scss
@@ -5,18 +5,17 @@
 }
 
 .menu__tittle {
+  position: absolute;
   color: white;
   margin-left: 5vw;
-}
-
-.menu__accordion {
-  position: absolute;
-  right: 0;
+  left: 0;
   top: 0;
 }
 
 .menu__list {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .menu__item {
