--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -66,7 +66,9 @@
 .menu__container {
   align-items: normal;
   justify-content: initial;
-  margin: 0;
+  margin: 0 auto;
+  margin-right: 0;
+  padding: 0;
 }
 
 .delivery__container {
