--- a/scss/layout/bot-scroll.scss
+++ b/scss/layout/bot-scroll.scss
@@ -1,3 +1,9 @@
+.bot-scroll {
+  @include phones () {
+    display: none;
+  }
+}
+
 .bot-scroll__link-next {
   display: flex;
   justify-content: center;
