Change btn on slider

--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,9 @@ ul {
   justify-content: center; }
 
 .burger-info__btn-left {
+  z-index: 10;
+  background: none;
+  border: none;
   position: absolute;
   left: 5%;
   fill: white;
@@ -474,6 +477,9 @@ ul {
     height: 17px; }
 
 .burger-info__btn-right {
+  z-index: 10;
+  background: none;
+  border: none;
   position: absolute;
   right: 5%;
   fill: white;
