--- a/scss/section/burger-info.scss
+++ b/scss/section/burger-info.scss
@@ -6,6 +6,9 @@
 }
 
 .burger-info__btn-left {
+    z-index: 10;
+    background: none;
+    border: none;
     position: absolute;
     left: 5%;
     fill: white;
@@ -20,6 +23,9 @@
 
 
 .burger-info__btn-right {
+    z-index: 10;
+    background: none;
+    border: none;
     position: absolute;
     right: 5%;
     fill: white;
