--- a/scss/section/burger-info.scss
+++ b/scss/section/burger-info.scss
@@ -6,6 +6,7 @@
 }
 
 .burger-info__btn-left {
+    cursor: pointer;
     z-index: 10;
     background: none;
     border: none;
@@ -23,6 +24,7 @@
 
 
 .burger-info__btn-right {
+    cursor: pointer;
     z-index: 10;
     background: none;
     border: none;
@@ -68,6 +70,7 @@
 }
 
 .slide__decor-composition {
+    cursor: pointer;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -93,6 +96,7 @@
 }
 
 .slide__decor-kkal {
+    cursor: pointer;
     position: absolute;
     bottom: 0px;
     left: 0px;
