add accordion to menu and team sections

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ ul {
   min-height: 650px; }
 
 .section {
+  overflow: hidden;
   min-height: 100vh;
   width: 100vw; }
 
@@ -754,7 +755,8 @@ ul {
   color: white;
   font-size: 0.875rem;
   font-weight: 400;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
   .team__item-btn:before {
     left: -20px;
     position: absolute;
@@ -790,14 +792,13 @@ ul {
   height: 0;
   overflow: hidden; }
 
-.team__item--active .team__item-btn:before {
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg); }
-
-.team__item--active .team__link-more {
+.team__link-more--active {
   height: 95px;
   overflow: initial; }
+  .team__link-more--active .team__item-btn:before {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
 
 .team__link-content {
   max-width: 13.125rem; }
@@ -835,10 +836,6 @@ ul {
   display: -ms-flexbox;
   display: flex; }
 
-.menu__item--active .menu__more {
-  width: 40vw;
-  overflow: initial; }
-
 .menu__link-for {
   max-width: 4vw;
   height: 100vh;
@@ -859,7 +856,8 @@ ul {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  cursor: pointer; }
   @media screen and (max-width: 800px) {
     .menu__link-for {
       min-width: 7vw; } }
@@ -882,16 +880,9 @@ ul {
 .menu__more {
   background-color: #2f3234;
   opacity: .9;
-  width: 33.75rem; }
-  .menu__more-meat {
-    width: 0;
-    overflow: hidden; }
-  .menu__more-veg {
-    width: 0;
-    overflow: hidden; }
-  .menu__more-diet {
-    width: 0;
-    overflow: hidden; }
+  width: 33.75rem;
+  width: 0;
+  overflow: hidden; }
 
 .menu__more-text {
   font-family: 'Ubuntu-Light', Arial, serif;
@@ -900,6 +891,10 @@ ul {
   color: white;
   margin: 3.75rem auto;
   max-width: 29.375rem; }
+
+.menu__more--active {
+  width: 40vw;
+  overflow: initial; }
 
 .staff {
   height: 100vh;
