--- a/scss/section/burger-info.scss
+++ b/scss/section/burger-info.scss
@@ -57,7 +57,8 @@
 }
 
 .slide__decor {
-    width: 55%;
+    // width: 55%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -181,3 +182,43 @@
     }
 }
 
+
+// Slider
+
+.bx-wrapper {
+    background: none;
+    border: none;
+    box-shadow: none;
+    margin-bottom: 0;
+}
+
+.bx-wrapper .bx-controls-direction a {
+    color: white;
+    text-indent: 0;
+    text-decoration: none;
+    font-size: 40px;
+    margin-top: -30px;
+}
+
+.bx-prev {
+    background: url('../img/decor/left-btn.png') center center no-repeat !important;
+}
+
+.bx-next {
+    background: url('../img/decor/right-btn.png') center center no-repeat !important;
+}
+
+.bx-wrapper .bx-prev {
+    left: -10px;
+}
+
+.bx-wrapper .bx-next {
+    right: -10px;
+}
+
+.slider__slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 700px;
+}
