--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -2,11 +2,16 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .maincontent {
   height: 100%;
   min-height: 650px;
+  position: relative;
+  top: 0;
+  transition: 1s;
+  will-change: transform;
 }
 
 .section {
